styles/faq-accordion.less
#faq {
  .accordion-content {
    // override display:none - backwards compatibility!
    display: block !important;
    max-height: 20rem;
    transition: max-height .4s, padding .5s, color .25s, background-color .4s;
  }

  .accordion-header:not(.expanded) ~ .accordion-content {
    max-height: 0;
    padding-top: 0;
    padding-bottom: 0;
    color: transparent;
    background-color: unset;
  }
}

